# mrob.org

./: .gitignore  .gitmodules  astro.config.ts  books.html  deploy.sh  hugo.toml  index.html  net-worth.html  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy.yml
content/posts/: django-polymorphic-increase-query-limit.md
content/posts/django-polymorphic-increase-query-limit/: index.md
content/posts/starlink-self-host/: index.md
cycling/: routes.html
land/: index.html
land/5754_Ranch_Rd_Hartsel_CO_80449/: index.html
nye/: cara.html  carolyn.html  chance.html  dave.html  franco.html  mac.html  matt.html  mattr.html  neil.html  stewart.html
nye/Unused/: henchy.html  kitty.html
public/: CNAME
remodel/1/: generate.py  index.html
remodel/1/2022-05-19/: index.html
remodel/1/2022-06-04/: index.html
remodel/1/2022-06-06/: index.html
remodel/1/2022-07-11/: index.html
remodel/1/2022-07-12/: index.html
remodel/1/2022-07-24/: index.html
remodel/1/2022-07-28/: index.html
remodel/1/css/: style.css
remodel/1/photos/2022-05-03/: index.html
remodel/1/photos/2022-05-05/: index.html
remodel/1/photos/2022-05-19/: index.html
remodel/1/photos/2022-06-04/: index.html
remodel/1/photos/2022-06-06/: index.html
src/components/: Footer.astro  Header.astro  PostMeta.astro
src/content/: config.ts
src/layouts/: Base.astro
src/pages/: index.astro  rss.xml.ts  sponsors.astro
src/pages/blog/: [...slug].astro
src/pages/tags/: [tag].astro
src/plugins/: rehype-image-caption.ts
src/styles/: global.css
(+20 files in other folders)
