[project]
name = "mrob-org"
version = "0.1.0"
description = ""
authors = [
    {name = "Matt Robinson",email = "mattrob@hey.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "mrob", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
